packages/optimizer/core/src/snapshots/qwik_core__test__destructure_args_helper_reassigns_nullish_assign.snap
---
source: packages/optimizer/core/src/test.rs
assertion_line: 3829
expression: output
---
==INPUT==


		export const buildHead = ({ ogImage }: { ogImage?: string }) => {
			ogImage ??= `fallback-image-url`;
			return { ogImage };
		};
		
============================= test.js ==

export const buildHead = ({ ogImage })=>{
    ogImage ??= `fallback-image-url`;
    return {
        ogImage
    };
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"AACE,OAAO,MAAM,YAAY,CAAC,EAAE,OAAO,EAAwB;IAC1D,YAAY,CAAC,kBAAkB,CAAC;IAChC,OAAO;QAAE;IAAQ;AAClB,EAAE\"}")
== DIAGNOSTICS ==

[]
