packages/optimizer/core/src/snapshots/qwik_core__test__destructure_args_helper_reassigns_string_literal.snap
---
source: packages/optimizer/core/src/test.rs
assertion_line: 3809
expression: output
---
==INPUT==


		export const buildHead = ({ ogImage }: { ogImage?: string }) => {
			if (!ogImage) ogImage = "fallback-image-url";
			return {
				title: "x",
				meta: [{ property: "og:image", content: ogImage }],
			};
		};
		
============================= test.js ==

export const buildHead = ({ ogImage })=>{
    if (!ogImage) ogImage = "fallback-image-url";
    return {
        title: "x",
        meta: [
            {
                property: "og:image",
                content: ogImage
            }
        ]
    };
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"AACE,OAAO,MAAM,YAAY,CAAC,EAAE,OAAO,EAAwB;IAC1D,IAAI,CAAC,SAAS,UAAU;IACxB,OAAO;QACN,OAAO;QACP,MAAM;YAAC;gBAAE,UAAU;gBAAY,SAAS;YAAQ;SAAE;IACnD;AACD,EAAE\"}")
== DIAGNOSTICS ==

[]
