packages/optimizer/core/src/snapshots/qwik_core__test__destructure_args_helper_update_expr_on_param.snap
---
source: packages/optimizer/core/src/test.rs
assertion_line: 3846
expression: output
---
==INPUT==


		export const bump = ({ count }: { count: number }) => {
			count++;
			return { count };
		};
		
============================= test.js ==

export const bump = ({ count })=>{
    count++;
    return {
        count
    };
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"AACE,OAAO,MAAM,OAAO,CAAC,EAAE,KAAK,EAAqB;IAChD;IACA,OAAO;QAAE;IAAM;AAChB,EAAE\"}")
== DIAGNOSTICS ==

[]
