packages/optimizer/core/src/snapshots/qwik_core__test__destructure_args_inline_cmp_expr_stmt.snap
---
source: packages/optimizer/core/src/test.rs
expression: output
---
==INPUT==


		export default ({ data }: { data: any }) =>
            <div
              data-is-active={data.selectedOutputDetail === 'options'}
              onClick$={() => {
                data.selectedOutputDetail = 'options';
              }}
            />;
		
============================= test.js ==

//
import { _fnSignal } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
//
const _hf0 = (p0)=>p0.data.selectedOutputDetail === 'options';
const _hf0_str = 'p0.data.selectedOutputDetail==="options"';
//
const q_test_div_q_e_click_pFqTss400MA = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_div_q_e_click_pFqTss400MA"), "test_div_q_e_click_pFqTss400MA").m();
export default ((_rawProps)=>/*#__PURE__*/ _jsxSorted("div", {
        "data-is-active": _fnSignal(_hf0, [
            _rawProps
        ], _hf0_str),
        "q-e:click": q_test_div_q_e_click_pFqTss400MA,
        "q:p": _rawProps
    }, null, null, 6, "u6_0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;mBAG8B,GAFV,KAEe,oBAAoB,KAAK;;;;AAF1D,eAAe,CAAA,2BACL,WAAC;QACC,gBAAc;;;QACd,WAAQ;;6BAGT,EAAE\"}")
============================= test.tsx_test_div_q_e_click_pFqTss400MA.js (ENTRY POINT)==

export const test_div_q_e_click_pFqTss400MA = (_, _1, _rawProps)=>{
    _rawProps.data.selectedOutputDetail = 'options';
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"8CAIwB;IACR,UAJI,KAIC,oBAAoB,GAAG;AAC9B\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_div_q_e_click_pFqTss400MA",
  "entry": null,
  "displayName": "test.tsx_test_div_q_e_click",
  "hash": "pFqTss400MA",
  "canonicalFilename": "test.tsx_test_div_q_e_click_pFqTss400MA",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    160,
    238
  ],
  "paramNames": [
    "_",
    "_1",
    "_rawProps"
  ]
}
*/
== DIAGNOSTICS ==

[]
