packages/optimizer/core/src/snapshots/qwik_core__test__destructure_args_inline_cmp_for_of_declarator_no_refusal.snap
---
source: packages/optimizer/core/src/test.rs
expression: output
---
==INPUT==


		import { component$ } from "@qwik.dev/core";
		export const Cmp = component$(({ items }: { items: string[] }) => {
			const out = [];
			for (const it of items) out.push(it);
			return <div>{out.join(",")}</div>;
		});
		
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Cmp_component_4ryKJTOKjWE = /*#__PURE__*/ qrl(()=>import("./test.tsx_Cmp_component_4ryKJTOKjWE"), "Cmp_component_4ryKJTOKjWE");
//
export const Cmp = /*#__PURE__*/ componentQrl(q_Cmp_component_4ryKJTOKjWE);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAEE,OAAO,MAAM,oBAAM,0CAIhB\"}")
============================= test.tsx_Cmp_component_4ryKJTOKjWE.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
//
export const Cmp_component_4ryKJTOKjWE = (_rawProps)=>{
    const out = [];
    for (const it of _rawProps.items)out.push(it);
    return /*#__PURE__*/ _jsxSorted("div", null, null, out.join(","), 1, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;yCAEgC;IAC7B,MAAM,MAAM,EAAE;IACd,KAAK,MAAM,gBAFqB,MAER,IAAI,IAAI,CAAC;IACjC,qBAAO,WAAC,mBAAK,IAAI,IAAI,CAAC;AACvB\"}")
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_4ryKJTOKjWE",
  "entry": null,
  "displayName": "test.tsx_Cmp_component",
  "hash": "4ryKJTOKjWE",
  "canonicalFilename": "test.tsx_Cmp_component_4ryKJTOKjWE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    81,
    220
  ],
  "paramNames": [
    "_rawProps"
  ]
}
*/
== DIAGNOSTICS ==

[]
